# visualization.goom-

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  ProjectOptions.cmake  README-Kodi-flatpak  README.md  azure-pipelines.yml  goom-build-with-docker-toolchain.sh  goom-build.bat  goom-build.sh  goom-clang-tidy-with-docker-toolchain.sh  goom-clang-tidy.sh  goom-configure-with-docker-toolchain.sh  goom-configure.bat  goom-configure.sh  goom-docker-build.sh  goom-docker-install-to.sh  goom-docker-path.sh  goom-docker-paths.sh  goom-docker-remote-build.sh  goom-docker-remote-copy.sh  goom-docker-run.sh  goom-get-vars.sh  goom-install.sh  goom-libs-build.sh  goom-set-vars.sh  goom-spell-french.dic  goom-spell.dic  goom-tests-with-docker-toolchain.sh  goom-tests.sh  goom-unit-tests-with-docker-toolchain.sh  goom-unit-tests.sh  kodi-build.sh  kodi-config-goom.sh  kodi-config.sh  kodi-make-all.sh  kodi-make-goom.sh  (+4 more)
dependencies/goom-libs/: .clang-tidy  CMakeLists.txt
dependencies/goom-libs/src/: CMakeLists.txt
dependencies/goom-libs/src/goom/: CMakeLists.txt
dependencies/goom-libs/src/goom/src/: goom_control.cpp  sound_info.cpp  v2d.h
dependencies/goom-libs/src/goomtests/src/: test_pixels.cpp
dependencies/goom-libs/src/goomutils/: CMakeLists.txt
dependencies/goom-libs/src/goomutils/src/: color_data_maps.cpp_orig  colormaps.cpp  colorutils.cpp  extra_color_groups.cpp  t_values.cpp
dependencies/goom-libs/src/tests/: CMakeLists.txt
dependencies/goom-libs/src/tests/src/: test_main.cpp  test_pixels.cpp
dependencies/goom-libs/src/vivid/: CMakeLists.txt
depends/goom-libs/: .clang-format-runner-ignore  CMakeLists.txt
depends/goom-libs/lib/fmt/include/: format
depends/goom-libs/lib/libdivide/: libdivide.h
depends/goom-libs/lib/magic_enum/: magic_enum.hpp
depends/goom-libs/lib/span/include/: span
depends/goom-libs/lib/std_fmt/include/: format_23
depends/goom-libs/src/: CMakeLists.txt
depends/goom-libs/src/filter-plots/: after_effects.py  all_effects.py  complex_plot.py  effects_cplot.py  effects_image.py  filter-cplot.py  filter_effects.py  remap_tests.py  select_effects.py
depends/goom-libs/src/goom/: AUTHORS  CMakeLists.txt  README
depends/goom-libs/src/plotting/: main.py  rm-too-small.sh
depends/goom-libs/src/tests/: CMakeLists.txt
depends/goom-libs/src/vivid/: .clang-tidy  CMakeLists.txt
lib-goom/: CMakeLists.txt
lib-goom/cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
lib-goom/src/: CMakeLists.txt
lib-goom/src/goom/: CMakeLists.txt
lib-goom/src/goom/src/: sound_info.cpp
lib-goom/src/goomtests/: CMakeLists.txt
lib-goom/src/goomutils/src/: colormaps.cpp  create_colormaps.py  random_colormaps.cpp  t_values.cpp
lib-goom/src/vivid/src/: color.cpp  oklab.cpp
lib/goom/: CMakeLists.txt
lib/goom/include/goom/: convolve_fx.h  draw_methods.h  filter_data.h  filters.h  flying_stars_fx.h  goom_control.h  goom_dots_fx.h  goom_draw.h  goom_graphic.h  goom_plugin_info.h  goom_version.h  goom_visual_fx.h  ifs_dancers_fx.h  image_fx.h  lines_fx.h  sound_info.h  tentacles_fx.h  tube_fx.h  v2d.h  zoom_filter_fx.h
lib/goom/src/: config_param.c  convolve_fx.c  convolve_fx.cpp  drawmethods.c  drawmethods.h  filters.c  filters.cpp  filters.h  flying_stars_fx.c  flying_stars_fx.cpp  gfontlib.c  gfontlib.h  gfontrle.c  gfontrle.h  goom.h  goom_config.h  goom_config_param.h  goom_control.cpp  goom_core.c  goom_dots_fx.cpp  goom_draw.cpp  goom_filters.h  goom_fx.h  goom_graphic.h  goom_hash.c  goom_hash.h  goom_logging.c  goom_logging.h  goom_plugin_info.h  goom_testing.c  goom_testing.h  goom_tools.c  goom_tools.h  goom_visual_fx.h  goomsl.c  goomsl.h  goomsl_hash.c  goomsl_hash.h  goomsl_heap.c  goomsl_heap.h  (+33 more)
lib/goom/src/control/: goom_all_visual_fx.cpp  goom_all_visual_fx.h  goom_all_visual_fx_color_maps.cpp  goom_events.cpp  goom_events.h  goom_image_buffers.h  goom_message_displayer.cpp  goom_message_displayer.h  goom_music_lines_reactor.cpp  goom_music_lines_reactor.h  goom_music_settings_reactor.cpp  goom_music_settings_reactor.h  goom_states.cpp  goom_states.h  goom_title_display.cpp  goom_title_display.h  goom_title_displayer.cpp  goom_title_displayer.h
lib/goom/src/draw/: draw_methods.cpp  draw_methods.h  goom_draw.h  goom_draw_to_buffer.cpp  goom_draw_to_buffer.h  goom_draw_to_container.cpp  goom_draw_to_container.h  goom_draw_to_many.cpp  goom_draw_to_many.h  text_draw.cpp  text_draw.h
lib/goom/src/filter_test/: mmx.h  px_py_calc.c  zoom_filter_mmx-v0.c  zoom_filter_mmx.c
lib/goom/src/filters/: amulet.cpp  amulet.h  crystal_ball.cpp  crystal_ball.h  filter_amulet.cpp  filter_amulet.h  filter_buffers.cpp  filter_buffers.h  filter_buffers_manager.cpp  filter_buffers_manager.h  filter_buffers_service.cpp  filter_buffers_service.h  filter_colors_service.cpp  filter_colors_service.h  filter_control.cpp  filter_control.h  filter_crystal_ball.cpp  filter_crystal_ball.h  filter_hypercos.cpp  filter_hypercos.h  filter_image_displacements.cpp  filter_image_displacements.h  filter_image_speed_coeffs.cpp  filter_image_speed_coeffs.h  filter_image_velocity.cpp  filter_image_velocity.h  filter_noise.cpp  filter_noise.h  filter_normalized_coords.cpp  filter_normalized_coords.h  filter_planes.cpp  filter_planes.h  filter_rotation.cpp  filter_rotation.h  filter_scrunch.cpp  filter_scrunch.h  filter_settings.h  filter_settings_service.cpp  filter_settings_service.h  filter_simple_speed_coefficients_effect.h  (+34 more)
lib/goom/src/ifs/: colorizer.cpp  colorizer.h  fractal.cpp  fractal.h  low_density_blurrer.cpp  low_density_blurrer.h
lib/goom/src/stats/: filter_stats.cpp  filter_stats.h  goom_control_stats.h
lib/goom/src/tentacles/: tentacle_driver.cpp  tentacle_driver.h  tentacles.cpp  tentacles.h
lib/goom/src/tubes/: tubes.cpp  tubes.h
lib/goom/src/visual_fx/: flying_stars_fx.cpp  flying_stars_fx.h  goom_dots_fx.cpp  goom_dots_fx.h  goom_visual_fx.h  ifs_dancers_fx.cpp  ifs_dancers_fx.h  lines_fx.cpp  lines_fx.h  tentacles_fx.cpp  tentacles_fx.h  tube_fx.cpp  tube_fx.h  zoom_filter_fx.cpp  zoom_filter_fx.h
(+6360 files in other folders)
